--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -1,19 +1,19 @@
 
 <div className="markdown-body">
 
-<div>
+<header>
 
-# Art Pai
+# Art Pai's Front-end Developer Resume
 
-<minipai@gmail.com>
+<minipai@gmail.com> &times; [/in/minipai/](https://www.linkedin.com/in/minipai/)
 
 10 years of experience in web app development. As a front-end developer, I am always up to date with the latest front-end technologies. As a web designer, user experience is my priority.
+
+</header>
 
 ## Hammers
 
 `HTML`  `CSS` `JavaScript` `TypeScript` `GraphQL` `RxJS` `React` `Redux` `Webpack` `RWD` `FP` `Photoshop`
-
-</div>
 
 ## Experience
 
