--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -5,7 +5,7 @@
 
 # Art Pai's Front-end Developer Resume
 
-<minipai@gmail.com> &times; [/in/minipai/](https://www.linkedin.com/in/minipai/)
+<minipai@gmail.com>
 
 10 years of experience in web app development. As a front-end developer, I am always up to date with the latest front-end technologies. As a web designer, user experience is my priority.
 
@@ -19,7 +19,7 @@
 
 <section>
 
-### Front-end Developer, Stackla
+### Front-end Developer, [Stackla](https://stackla.com)
 
 07/2016 — present
 
@@ -36,7 +36,7 @@
 
 <section>
 
-### Front-end Developer, Bindo
+### Front-end Developer, [Bindo](https://bindopos.com/)
 
 03/2015 – 06/2016
 
@@ -98,7 +98,7 @@
 
 <section>
 
-### Front-end Developer/Web Designer, 94iPlay
+### Front-end Developer/Web Designer, [94iPlay](http://www.94iplay.tw)
 
 12/2008 – 10/2010
 
@@ -110,5 +110,14 @@
 **TECH STACK** `PHP` `Codeigniter` `Drupal` `HTML` `CSS` `jQuery`
 
 </section>
+
+<footer>
+
+## Links
+
+- [Instagram](https://instagram.com/minipai)
+- [LinkdedIn](https://www.linkedin.com/in/minipai/)
+
+</footer>
 
 </div>
