--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -1,4 +1,3 @@
-
 <div className="markdown-body">
 
 <header>
@@ -13,17 +12,16 @@
 
 ## Hammers
 
-`HTML`  `CSS` `JavaScript` `TypeScript` `GraphQL` `RxJS` `React` `Redux` `Webpack` `RWD` `FP` `Photoshop`
+`HTML` `CSS` `JavaScript` `TypeScript` `GraphQL` `RxJS` `React` `Redux` `Webpack` `RWD` `FP` `Photoshop`
 
 ## Experience
 
 <section>
 
-### Front-end Developer, [Stackla](https://stackla.com)
+### Front-end Developer, [Stackla](https://stackla.com), Sydney
 
-07/2016 — present
+07/2016 — 11/2019 `3Y4M`
 
-- First job in Australia
 - Build UI with Single Page Architecture to provide user quick interaction response
 - Take care of interaction details to provide the best user experience
 - Develop a reusable UI library
@@ -36,9 +34,9 @@
 
 <section>
 
-### Front-end Developer, [Bindo](https://bindopos.com/)
+### Front-end Developer, [Bindo](https://bindopos.com/), Hong Kong
 
-03/2015 – 06/2016
+03/2015 – 06/2016 `1Y4M`
 
 - Develop "Bindo Dashboard", a web-based user control panel
 - Build UI with Single Page Architecture provide user fastest UI response
@@ -51,14 +49,14 @@
 
 <section>
 
-### Front-end Developer/Designer, Biideal
+### Front-end Developer/Designer, Biideal, Taiwan
 
-01/2013 – 03/2015
+01/2013 – 03/2015 `2Y3M`
 
-- Design and build landing page of Biideal website, with RWD
-- Design and build standard showcase page of our customer (local stores)
-- Design and build back-end admin UI that can do inline-edit and sorting with drag-n-drop
-- Deliver new feature and pages of our site in the fastest speed, as a startup
+- Design and build landing pages of Biideal website, with RWD
+- Design and build standard showcase pages of our customer (local stores)
+- Design and build back-end admin UI that can do inline-edit and sort with drag-n-drop
+- Deliver new feature and pages of our site at the fastest speed, as a startup
 
 **TECH STACK** `AngularJS` `Gulp` `Bootstrap` `CoffeeScript` `Stylus` `BackboneJS`, `jQuery` `Sass`
 
@@ -66,31 +64,31 @@
 
 <section>
 
-### Front-end Developer/Web Designer, Waveface
+### Front-end Developer/Web Designer, Waveface, Taiwan
 
-11/2011 – 12/2012
+11/2011 – 12/2012 `1Y2M`
 
 - Fill every missing design when coding PSD to a real website.
-- Develop company homepage form PSD provide by visual designer.
-- Co-working with Django developer to build company’s own service (web client).
-- Design UI visual of web client, everything drawn by CSS3.
-- Develop UI interactions of web client, powered by JavaScript.
-- Theme company blog, powered by Wordpress.
+- Develop the company homepage form PSD provided by the visual designer.
+- Co-working with Django developer to build company’s service (web client).
+- Design UI visual of the web client, everything drawn by CSS3.
+- Develop UI interactions of the web client, powered by JavaScript.
+- Theming thec ompany blog, powered by Wordpress.
 
 **TECH STACK** `Wordpress` `Bootstrap` `BackboneJS` `jQuery` `Sass`
-    
+
 </section>
 
 <section>
 
-### Front-end Developer, Freelance
+### Front-end Developer, Freelance, Taiwan
 
-06/2010 – 02/2012
+06/2010 – 02/2012 `1Y9M`
 
-- Design template for clients that is web developer.
-- Code PSD into HTML/CSS for clients that is designer.
-- Design and develop website with PHP for ordinary clients.
-- Take photography of client’s products that will be used on website.
+- Design template for clients that is a web developer.
+- Code PSD into HTML/CSS for clients that is a designer.
+- Design and develop websites with PHP for ordinary clients.
+- Take photography of client’s products that will be used on websites.
 
 **TECH STACK** `PHP` `Codeigniter` `HTML` `CSS` `jQuery`
 
@@ -98,14 +96,14 @@
 
 <section>
 
-### Front-end Developer/Web Designer, [94iPlay](http://www.94iplay.tw)
+### Front-end Developer/Web Designer, [94iPlay](http://www.94iplay.tw), Taiwan
 
-12/2008 – 10/2010
+12/2008 – 10/2010 `1Y11M`
 
 - Delivered over 20 websites to clients.
 - Design Drupal templates and PHP powered websites.
 - Develop Drupal sites and PHP E-commerce websites.
-- Done several print design, ie. business card design
+- Done several print designs, e.g. business card design
 
 **TECH STACK** `PHP` `Codeigniter` `Drupal` `HTML` `CSS` `jQuery`
 
