--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -6,7 +6,7 @@
 
 <minipai@gmail.com>
 
-10 years of experience in web app development. As a front-end developer, I am always up to date with the latest front-end technologies. As a web designer, user experience is my priority.
+Versatile front-end developer/designer with 9+ years of experience designing and developing SaaS web app. Passionate in design system, crafted in-house UI component library. Always build user interface considering the best user experience and up to date with the latest front-end technologies.
 
 </header>
 
@@ -24,7 +24,7 @@
 
 - Build UI with Single Page Architecture to provide user quick interaction response
 - Take care of interaction details to provide the best user experience
-- Develop a reusable UI library
+- Develop an UI component library
 - Construct a React AJAX architecture
 - Upgrade tech stack to speed up development performance
 
